view/src/main/webapp/css/logiweb.css
body {
    padding-top: 70px;
    background-image: url('images/trucks.png');
    background-repeat: no-repeat;
    background-position: right bottom 50px;
}

/* Sticky footer styles
-------------------------------------------------- */
html {
    position: relative;
    min-height: 100%;
}

body {
    margin-bottom: 60px;
}

.footer {
    position: absolute;
    padding: 25px 0px 0px 0px;
    color: #ffffff;
    bottom: 0;
    width: 100%;
    height: 60px;
}

/* Setting background color of odd rows in table
-------------------------------------------------- */
.table tr th {
    background-color: #eee;
}

.table-striped > tbody > tr:nth-child(even) > td {
    background-color: #fff;
}

.table-striped > tbody > tr:nth-child(odd) > td {
    background-color: #eee;
}

.table-hover tr:hover th,
.table-hover tr:nth-child(even):hover td,
.table-hover tr:nth-child(odd):hover td {
    background-color: #beede4;
}

/* Setting styles for active navbar-header */
.navbar-header.active a {
    background-color: #15a589;
}

/* Table alignment */
.table.middleAligned > tbody > tr > td {
    vertical-align: middle;
}

/* Create buttons spacing before tables */
div.text-right a {
    margin-bottom: 15px;
}

/* Buttons size inside tables */
td.buttonsCell {
    width: 225px;
}

td.buttonsCell div {
    top: 8px;
}

td.buttonsCell .btn {
    padding: 0;
}

td.buttonsCell div div.editButton {
    padding-left: 20px;
}

td.buttonsCell div div.removeButton {
    padding-left: 10px;
}

td > div > div > form > button {
    width: 90px;
    height: 40px;
}

/* Remove button styling in Orders table */
#ordersTable > tbody > tr > td.buttonsCell {
    width: 110px;
    padding-left: 9px;
}

#ordersTable > tbody > tr > td.buttonsCell > form > button {
    width: 90px;
    height: 40px;
}

#ordersTable > tbody > tr > td.buttonsCell > form > button {
    width: 90px;
    height: 40px;
}

/* Validation messages */
div.validationError {
    margin: 5px 0 0 5px;
}

